Fixed tree flickering issue on scroll. #5559

--- a/web/pgadmin/static/scss/_pgadmin4-tree.overrides.scss
+++ b/web/pgadmin/static/scss/_pgadmin4-tree.overrides.scss
@@ -19,6 +19,11 @@
     position: absolute !important;
     height: 100% !important;
     top: 0px !important;
+
+    > div {
+      scrollbar-gutter: stable;
+      overflow: overlay !important;
+    }
   }
 }
 
